--- a/templates/product.html
+++ b/templates/product.html
@@ -11,7 +11,7 @@
         <!--Grid column-->
         <div class="col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+          <img src="https://files.realpython.com/media/python-basics-3d-transparent-centered-wide.eeaa9110a4a9.png" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -24,18 +24,18 @@
 
             <div class="mb-3">
               <a href="">
-                <span class="badge purple mr-1">{{ object.get_category_display }}</span>
+                <span class="badge red mr-1">{{ object.get_category_display }}</span>
               </a>
             </div>
 
             <p class="lead">
               {% if object.discount_price %}
               <span class="mr-1">
-                <del>${{ object.price }}</del>
+                <del>₹{{ object.price }}</del>
               </span>
-              <span>${{ object.discount_price }}</span>
+              <span>₹{{ object.discount_price }}</span>
               {% else %}
-              <span>${{ object.price }}</span>
+              <span>₹{{ object.price }}</span>
               {% endif %}
             </p>
 
@@ -95,7 +95,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-12 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
+          <img src="https://images-workbench.99static.com/j9WSwSr9JkE53F5BZuAuZ-BNH1w=/99designs-contests-attachments/108/108095/attachment_108095446" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -103,7 +103,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
+          <img src="https://1.bp.blogspot.com/-0FZvAWm-2U8/X1yRqDlEc2I/AAAAAAAAAYk/UExYjUslnkMDFjGfGBqTCfU5ikco12yKgCLcBGAsYHQ/s857/WhatsApp%2BImage%2B2020-09-12%2Bat%2B2.18.09%2BPM.jpeg" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
@@ -111,7 +111,7 @@
         <!--Grid column-->
         <div class="col-lg-4 col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
+          <img src="https://images-workbench.99static.com/sX2DP-hV2mphIHNbRtar-AyfAdI=/99designs-contests-attachments/100/100159/attachment_100159774" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
