--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,11 @@
 {% load cart_template_tags %}
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="background-color:#393D47;>
     <div class="container">
 
       <!-- Brand -->
       <a class="navbar-brand waves-effect" href="/">
-        <strong class="blue-text">DJe-commerce</strong>
+        <strong class="blue-text">Xbook</strong>
       </a>
 
       <!-- Collapse -->
